fixed double scrollbar

--- a/src/components/pages/static.css
+++ b/src/components/pages/static.css
@@ -3,8 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  overflow-y: auto;
-  height: 95vh;
 }
 
 .policy-container {
